package game.entities.weapons;

public final class MachineGun extends AbstractGun {
    public MachineGun() {
        super("Machine", 12_000, 120, 780.0, 360.0, -20.0, 58.0, "/images/weapons/Machine_gun.png");
    }
}
