package game.entities.weapons;

public final class RifleGun extends AbstractGun {
    public RifleGun() {
        super("Rifle", 15_000, 240, 860.0, 520.0, -35.0, 54.0, "/images/weapons/Rifle.png");
    }
}
