@startuml
class game.entities.weapons.MachineGun {
+ <<Create>> MachineGun()
}

class game.entities.weapons.ShotgunGun {
- {static} double[] VERTICAL_SPREAD
+ <<Create>> ShotgunGun()
+ List<Bullet> fire(Player,double,double,int)
}


interface game.entities.weapons.Gun {
~ String label()
~ long durationMillis()
~ long cooldownMillis()
~ Image sprite()
~ double renderWidth()
~ List<Bullet> fire(Player,double,double,int)
}

class game.entities.weapons.GunRegistry {
+ {static} Gun UNARMED
+ {static} Gun PISTOL
+ {static} Gun RIFLE
+ {static} Gun MACHINE_GUN
+ {static} Gun SHOTGUN
+ {static} List<Gun> SELECTABLE_GUNS
- <<Create>> GunRegistry()
}


class game.entities.weapons.RifleGun {
+ <<Create>> RifleGun()
}

class game.entities.weapons.PistolGun {
+ <<Create>> PistolGun()
}

class game.entities.weapons.UnarmedGun {
- {static} WritableImage EMPTY_SPRITE
+ String label()
+ long durationMillis()
+ long cooldownMillis()
+ javafx.scene.image.Image sprite()
+ double renderWidth()
+ List<Bullet> fire(Player,double,double,int)
}


abstract class game.entities.weapons.AbstractGun {
- {static} Image EMPTY_GUN_SPRITE
- String label
- long durationMillis
- long cooldownMillis
- double bulletSpeed
- double forceX
- double forceY
- double renderWidth
- Image sprite
# <<Create>> AbstractGun(String,long,long,double,double,double,double,String)
+ String label()
+ long durationMillis()
+ long cooldownMillis()
+ Image sprite()
+ double renderWidth()
+ List<Bullet> fire(Player,double,double,int)
# Bullet createBullet(Player,double,double,int,double)
# Bullet createBullet(Player,double,double,int,double,double)
}




game.entities.weapons.AbstractGun <|-- game.entities.weapons.MachineGun
game.entities.weapons.AbstractGun <|-- game.entities.weapons.ShotgunGun
game.entities.weapons.AbstractGun <|-- game.entities.weapons.RifleGun
game.entities.weapons.AbstractGun <|-- game.entities.weapons.PistolGun
game.entities.weapons.Gun <|.. game.entities.weapons.UnarmedGun
game.entities.weapons.Gun <|.. game.entities.weapons.AbstractGun
@enduml